--- a/style.css
+++ b/style.css
@@ -1,1 +1,25 @@
-
+#topNav {
+  background: rgb(51, 94, 255);
+  box-shadow: 0px 1px 10px 10px black;
+    /* offset-x | offset-y | blur-radius | spread-radius | color */
+  margin: auto;
+  height: auto;
+  text-align: center;
+  width: 45%;
+}
+#topNav li {
+  display: inline;
+}
+#topNav a {
+  color: black;
+  display: inline-block;
+  height: 60px;
+  line-height: 60px;
+  margin: 0px;
+  padding: 0px 15px;  /*  top/bottom | left/right  */
+  text-decoration: none;
+  transition: color 0.3s ease-in;  /*  property | time | method  */
+}
+#topNav a:hover {
+  color: white;
+}
