--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #topNav {
-  background: rgb(51, 94, 255);
+  background: blue;
   box-shadow: 0px 1px 10px 10px black;
     /* offset-x | offset-y | blur-radius | spread-radius | color */
   margin: auto;
