--- a/style.css
+++ b/style.css
@@ -24,5 +24,6 @@
   color: white;
 }
 body {
-  background-color: crimson;
+  background-image: linear-gradient(to bottom, rgb(226, 41, 29) 0%, rgb(226, 41, 29) 100%
+    rgb(50, 239, 57) 100%, rgb(50, 239, 57) 0%;
 }
