--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #topNav {
   background: rgb(51, 94, 255);
-  box-shadow: 0px 1px 10px 10px black;
+  box-shadow: 0px 1px 10px 10px white;
     /* offset-x | offset-y | blur-radius | spread-radius | color */
   margin: auto;
   height: auto;
