--- a/style.css
+++ b/style.css
@@ -24,6 +24,6 @@
   color: white;
 }
 body {
-  background-image: linear-gradient(to bottom, rgb(226, 41, 29) 0%, rgb(226, 41, 29) 100%
+  background-image: linear-gradient(to right, rgb(226, 41, 29) 0%, rgb(226, 41, 29) 100%
     rgb(50, 239, 57) 100%, rgb(50, 239, 57) 0%;
 }
