--- a/style.css
+++ b/style.css
@@ -26,4 +26,8 @@
 body {
   background-image: linear-gradient(to right, rgb(226, 41, 29) 0%, rgb(226, 41, 29) 100%
     rgb(50, 239, 57) 100%, rgb(50, 239, 57) 0%;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
