--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+  padding: 0;
+  margin: 0'
+}
+
 #topNav {
   background: rgb(51, 94, 255);
   box-shadow: 0px 1px 10px 10px white;
@@ -24,8 +29,12 @@
   color: white;
 }
 body {
-  background-image: linear-gradient(to right, rgb(226, 41, 29) 25%, rgb(226, 41, 29) 100%
-    rgb(50, 239, 57) 100%, rgb(50, 239, 57) 25%;
+  background-image: linear-gradient(
+    to right, 
+    { color: #32EF39; } 0%, 
+    { color: #32EF39; } 50%;
+      { color: #E2291D; } 50%, 
+      { color: #E2291D; } 100%);
     
     display: flex;
     justify-content: center;
