--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 
 body {
   width: 100%;
-  height: 100vh;
+  height: 100;
   background: linear-gradient(
     to right, 
       color: #32EF39; 0%, 
