--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
 body {
   width: 100%;
   height: 100%;
-  background: linear-gradient(
+  background-image: linear-gradient(
     to right, 
       color: #32EF39; 0%, 
       color: #32EF39; 50%;
