--- a/style.css
+++ b/style.css
@@ -24,10 +24,10 @@
   color: white;
 }
 
-body {
+#body {
   width: 100%;
-  height: 100%;
-  background-image: linear-gradient(
+  height: 100vh;
+  background: linear-gradient(
     to right, 
       color: #32EF39; 0%, 
       color: #32EF39; 50%;
