--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+{
+  padding: 0;
+  margin: 0;
+}
+
 #topNav {
   background: rgb(51, 94, 255);
   box-shadow: 0px 1px 10px 10px white;
@@ -24,7 +29,7 @@
   color: white;
 }
 
-#body {
+body {
   width: 100%;
   height: 100vh;
   background: linear-gradient(
