--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
   background: linear-gradient(
     to right, 
     color: #32EF39; 0%, 
-    color: #32EF39; 50%;
+    color: #32EF39; 50%,
     color: #E2291D; 50%, 
     color: #E2291D; 100%);
 }
