--- a/style.css
+++ b/style.css
@@ -9,8 +9,10 @@ body {
   background: linear-gradient(
     to right, 
     #32EF39 0%, 
-    #32EF39 50%,
-    #E2291D 50%, 
+    #32EF39 49%,
+    black 49%,
+    black 51%,
+    #E2291D 51%, 
     #E2291D 100%);
 }
 
