--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 #topNav {
-  background: rgb(51, 94, 255);
+  background: white;
   box-shadow: 0px 1px 10px 10px white;
     /* offset-x | offset-y | blur-radius | spread-radius | color */
   margin: auto;
