--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     to right, 
     #32EF39 0%, 
     #32EF39 49%,
-    black 50%,
+    white 50%,
     #E2291D 51%, 
     #E2291D 100%);
 }
