--- a/style.css
+++ b/style.css
@@ -38,5 +38,5 @@ body {
   transition: color 0.3s ease-in;  /*  property | time | method  */
 }
 #topNav a:hover {
-  color: white;
+  color: black;
 }
