--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 #topNav {
-  background: white;
+  background: black;
   box-shadow: 0px 1px 10px 10px white;
     /* offset-x | offset-y | blur-radius | spread-radius | color */
   margin: auto;
@@ -38,5 +38,5 @@ body {
   transition: color 0.3s ease-in;  /*  property | time | method  */
 }
 #topNav a:hover {
-  color: black;
+  color: blue;
 }
