--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   display: inline;
 }
 #topNav a {
-  color: black;
+  color: white;
   display: inline-block;
   height: 60px;
   line-height: 60px;
