--- a/style.css
+++ b/style.css
@@ -17,11 +17,11 @@ body {
 
 #topNav {
   background: black;
-  box-shadow: 0px 1px 10px 10px white;
+  box-shadow: 0px 1px 10px 10px grey;
     /* offset-x | offset-y | blur-radius | spread-radius | color */
-  margin: auto;
+  margin: right;
   height: auto;
-  text-align: right;
+  text-align: center;
   width: 10%;
 }
 #topNav li {
