--- a/style.css
+++ b/style.css
@@ -19,9 +19,9 @@ body {
 
 #topNav {
   background: black;
-  box-shadow: 0px 1px 10px 10px grey;
+  box-shadow: 0px 1px 10px 10px white;
     /* offset-x | offset-y | blur-radius | spread-radius | color */
-  margin: right;
+  margin: left;
   height: auto;
   text-align: center;
   width: 10%;
