--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   background: black;
   box-shadow: 0px 1px 10px 10px white;
     /* offset-x | offset-y | blur-radius | spread-radius | color */
-  margin: left;
+  margin: center;
   height: auto;
   text-align: center;
   width: 10%;
