--- a/style.css
+++ b/style.css
@@ -2,7 +2,10 @@
   padding: 0;
   margin: 0;
 }
-body {
+<body class="index">
+<body class="game">
+<body class="creators">
+body.index {
   width: 100%;
   height: 100vh;
   background: linear-gradient(
@@ -12,6 +15,18 @@ body {
     white 50%,
     #E2291D 51%, 
     #E2291D 100%);
+}
+body.game {
+  width: 100%;
+  height: 100vh;
+  background: red;
+  opacity: 0.6;
+}
+body.creators {
+  width: 100%;
+  height: 100vh;
+  background: green;
+  opacity: 0.6;
 }
 /* Style buttons */
 .btn {
