--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body.creators {
   background-color: Black; /* Blue background */
   border: none; /* Remove borders */
   color: white; /* White text */
-  padding: 12px 16px 16px 12px; /* Some padding */
+  padding: 12px 16px; /* Some padding */
   font-size: 16px; /* Set a font size */
   cursor: pointer; /* Mouse pointer on hover */
 }
