--- a/style.css
+++ b/style.css
@@ -16,14 +16,12 @@ body.index {
 body.game {
   width: 100%;
   height: 100vh;
-  background: red;
-  opacity: 0.6;
+  background: LightRed;
 }
 body.creators {
   width: 100%;
   height: 100vh;
-  background: green;
-  opacity: 0.6;
+  background: LightGreen;
 }
 /* Style buttons */
 .btn {
