--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body.index {
 body.game {
   width: 100%;
   height: 100vh;
-  background: LightRed;
+  background: rgb(255, 204, 203);
 }
 body.creators {
   width: 100%;
