--- a/style.css
+++ b/style.css
@@ -44,3 +44,9 @@ h4 {
 .btn:hover {
   background-color: DimGray;
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
