--- a/style.css
+++ b/style.css
@@ -44,9 +44,10 @@ h4 {
 .btn:hover {
   background-color: DimGray;
 }
-.center {
+img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: "20";
+  width: 50%;
+  height: 40%;
 }
