--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h4 {
 .btn:hover {
   background-color: DimGray;
 }
-img {
+img.creators {
   display: block;
   margin-left: auto;
   margin-right: auto;
