--- a/style.css
+++ b/style.css
@@ -24,6 +24,9 @@ body.creators {
   background: LightGreen;
   text-align: center;
 }
+a.button  {
+  text-align: left;
+}
 h4 {
   text-align: center;
 }
