--- a/style.css
+++ b/style.css
@@ -56,3 +56,9 @@ img.game {
   margin-left: auto;
   margin-right: auto;
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
