--- a/style.css
+++ b/style.css
@@ -56,3 +56,8 @@ img.game {
   margin-left: auto;
   margin-right: auto;
 }
+#thumbs {
+  max-width: 1500;
+  margin-left: auto;
+  margin-right: auto;
+}
