--- a/style.css
+++ b/style.css
@@ -57,7 +57,5 @@ img.game {
   margin-right: auto;
 }
 #thumbs {
-  max-width: 1500;
-  margin-left: auto;
-  margin-right: auto;
+  display: flex;
 }
