--- a/style.css
+++ b/style.css
@@ -56,6 +56,9 @@ img.game {
   margin-left: auto;
   margin-right: auto;
 }
-#thumbs {
+.thumbs {
   display: flex;
+}
+.flex-child {
+  flex: 1;
 }
